--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,6 @@ python:
   - "2.6"
   - "2.7"
 install:
-  pip install -r requirements.txt --use-mirrors
-  pip install .
-script:
-  ./tests/runtests.sh
+  - pip install -r requirements.txt --use-mirrors
+  - pip install .
+script: ./tests/runtests.sh
