Add runtests.sh script to the distribution

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,5 +1,8 @@
 include LICENSE
 include README.rst
+
 recursive-include robots/locale *
 recursive-include robots/templates *
+
+include tests/runtests.sh
 recursive-include tests *.py
