Add tox config to the distribution

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -4,5 +4,6 @@ include README.rst
 recursive-include robots/locale *
 recursive-include robots/templates *
 
+include tox.ini
 include tests/runtests.sh
 recursive-include tests *.py
